--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "js-tdd-course",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "lint": "./node_modules/.bin/eslint src/*.js",
+    "prepush": "npm run lint",
+    "test": "echo \"Error: no test specified\" && exit"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/dudubernardino/TDD-JS"
   },
   "author": "Eduardo Bernardino <eduardomoura.moura@mail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
+  }
 }
